# CORE-Website

./: README.md  main.py  pyproject.toml
static/css/: fontstyle.css  style.css
templates/: about.html  base.html  basepy.html  contact.html  courses.html  home.html  pyT1.html  pyT2.html  pyT3.html  pyT4.html  pyT5.html  pyT6.html
