[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "ccreate"
version = "0.1.0"
[tool.poetry.dependencies]
cryptography = "^2.9"
flask = "^1.1"
flask-talisman = "^0.7.0"
python = "^3.8"
request = "^2019.4"
[tool.poetry.dev-dependencies]
